SQL DDL-DML scripts
SQL scripts created to extract data selection, now files need to be executed within the server.

Removed deprecated SQL 'UML' files

--- a/main.ipynb
+++ b/main.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -114,13 +114,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Error processing Ar76c.txt: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing Ar76f.txt: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR79C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR79F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR80C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR80F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR83C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR83F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR85C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR85F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR87C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR87F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR91C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR91F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR95C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "Error processing AR95F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
+      "SQL script for ar_1975_constituinte.xls saved to ./sql_scripts/ddl-dml\\ar_1975_constituinte.sql\n",
+      "SQL script for ar_1976.xls saved to ./sql_scripts/ddl-dml\\ar_1976.sql\n",
+      "SQL script for ar_1979_intercalar.xls saved to ./sql_scripts/ddl-dml\\ar_1979_intercalar.sql\n",
+      "SQL script for ar_1980.xls saved to ./sql_scripts/ddl-dml\\ar_1980.sql\n",
+      "SQL script for ar_1983.xls saved to ./sql_scripts/ddl-dml\\ar_1983.sql\n",
+      "SQL script for ar_1985.xls saved to ./sql_scripts/ddl-dml\\ar_1985.sql\n",
+      "SQL script for ar_1987.xls saved to ./sql_scripts/ddl-dml\\ar_1987.sql\n",
+      "SQL script for ar_1991.xls saved to ./sql_scripts/ddl-dml\\ar_1991.sql\n",
+      "SQL script for ar_1995.xls saved to ./sql_scripts/ddl-dml\\ar_1995.sql\n",
+      "SQL script for ar_1999.xls saved to ./sql_scripts/ddl-dml\\ar_1999.sql\n",
+      "SQL script for ar_2002.xls saved to ./sql_scripts/ddl-dml\\ar_2002.sql\n",
+      "SQL script for ar_2005.xls saved to ./sql_scripts/ddl-dml\\ar_2005.sql\n",
+      "SQL script for ar_2009.xls saved to ./sql_scripts/ddl-dml\\ar_2009.sql\n",
+      "SQL script for ar_2011.xls saved to ./sql_scripts/ddl-dml\\ar_2011.sql\n",
+      "Error processing diff_format: Unsupported file format. Please use .csv, .xls, or .xlsx files\n"
+     ]
+    }
+   ],
    "source": [
     "# Directory containing the data files\n",
-    "data_dir = '../Data_Selected'\n",
-    "output_dir = './sql_scripts'\n",
+    "data_dir = './Data_Selected'\n",
+    "output_dir = './sql_scripts/ddl-dml'\n",
     "\n",
     "# Create the output directory if it doesn't exist\n",
     "if not os.path.exists(output_dir):\n",
@@ -139,7 +177,7 @@
     "    \n",
     "    # Build the output file name based on the original file's name\n",
     "    base_name, _ = os.path.splitext(file_name)\n",
-    "    output_file = os.path.join(output_dir, base_name + '_ddl.sql')\n",
+    "    output_file = os.path.join(output_dir, base_name + '.sql')\n",
     "    \n",
     "    # Write the generated SQL script to the output file\n",
     "    with open(output_file, 'w') as f:\n",
