initialization of database in server
readme updated
data tables placed in server's database
more deprecated files removed

--- a/main-ddl.ipynb
+++ b/main-ddl.ipynb
@@ -2,40 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
-    "import psycopg2\n",
+    "\n",
     "import pandas as pd\n",
-    "import numpy as np\n",
-    "from psycopg2.extras import execute_values\n",
     "import os"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Database connection details\n",
-    "## get server login details\n",
-    "server_user = input(f'Enter username: ')\n",
-    "server_pass = input(f'Enter password: ')\n",
-    "\n",
-    "## get database login details\n",
-    "DB_CONFIG = {\n",
-    "    \"dbname\": \"Elections\",\n",
-    "    \"user\": server_user,\n",
-    "    \"password\": server_pass,\n",
-    "    \"host\": \"project-elections-dw-project-elections-dw.j.aivencloud.com\",\n",
-    "    \"port\": \"27706\"\n",
-    "}\n",
-    "\n",
-    "## Connect to the database\n",
-    "conn = psycopg2.connect(**DB_CONFIG)\n",
-    "cur = conn.cursor()"
    ]
   },
   {
@@ -184,6 +157,13 @@
     "        f.write(sql_script)\n",
     "    \n",
     "    print(f\"SQL script for {file_name} saved to {output_file}\")\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### cells below are explicitly for testing / debugging purposes"
    ]
   },
   {
@@ -439,19 +419,6 @@
     "ddl_path = './sql_scripts/ddl_script.sql'\n",
     "with open(ddl_path, 'w') as f:\n",
     "    f.write(test_sql_ddl)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "## Run SQL File\n",
-    "def run_sql_file(file_path):\n",
-    "    with open(file_path, 'r') as file:\n",
-    "        cur.execute(file.read())\n",
-    "run_sql_file('dimension_tables_init.sql')"
    ]
   }
  ],
