custom classes and functions consolidation
created myMethods module for imports on mains

created .gitignore to deal with those pesky pycaches

--- a/main_ddl.ipynb
+++ b/main_ddl.ipynb
@@ -8,86 +8,13 @@
    "source": [
     "\n",
     "import pandas as pd\n",
-    "import os"
+    "import os\n",
+    "from myMethods import iter_file_paths, generate_ddl_from_file"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "\n",
-    "def generate_ddl_from_file(file_path):\n",
-    "    \"\"\"\n",
-    "    Generate SQL DDL from a CSV or Excel file\n",
-    "    \n",
-    "    Args:\n",
-    "        file_path (str): Path to the input file (.csv, .xls, or .xlsx)\n",
-    "    \n",
-    "    Returns:\n",
-    "        str: SQL DDL statement\n",
-    "    \"\"\"\n",
-    "    \n",
-    "    # Extract the file extension using os.path.splitext\n",
-    "    _, ext = os.path.splitext(file_path)\n",
-    "    file_extension = ext.lower()[1:]  # Remove the leading dot\n",
-    "\n",
-    "    # Check if the file extension is valid\n",
-    "    if file_extension == 'csv':\n",
-    "        df = pd.read_csv(file_path)\n",
-    "    elif file_extension in ['xls', 'xlsx']:\n",
-    "        df = pd.read_excel(file_path)\n",
-    "    else:\n",
-    "        raise ValueError(\"Unsupported file format. Please use .csv, .xls, or .xlsx files\")\n",
-    "\n",
-    "    dtype_mapping = {\n",
-    "        'object': 'TEXT',\n",
-    "        'int64': 'INTEGER',\n",
-    "        'float64': 'NUMERIC',\n",
-    "        'datetime64[ns]': 'TIMESTAMP',\n",
-    "        'bool': 'BOOLEAN'\n",
-    "    }\n",
-    "    \n",
-    "    # Use os.path.basename and os.path.splitext to extract the table name\n",
-    "    table_name = os.path.splitext(os.path.basename(file_path))[0].lower()\n",
-    "    columns = []\n",
-    "    for column, dtype in df.dtypes.items():\n",
-    "        sql_type = dtype_mapping.get(str(dtype), 'TEXT')\n",
-    "        columns.append(f'    \"{column}\" {sql_type}')\n",
-    "    \n",
-    "    # Data table creation DDL\n",
-    "    ddl = f\"CREATE TABLE IF NOT EXISTS {table_name} (\\n\"\n",
-    "    ddl += \",\\n\".join(columns)\n",
-    "    ddl += \"\\n);\"\n",
-    "    \n",
-    "    # Data insertion DDL / Extraction step of the ETL process\n",
-    "    columns_list = \", \".join([f'\"{col}\"' for col in df.columns])\n",
-    "    insert_statements = []\n",
-    "    for index, row in df.iterrows():\n",
-    "        values = []\n",
-    "        for col in df.columns:\n",
-    "            if pd.isna(row[col]):\n",
-    "                values.append('NULL')\n",
-    "            elif isinstance(row[col], (int, float)):\n",
-    "                values.append(str(row[col]))\n",
-    "            elif isinstance(row[col], bool):\n",
-    "                values.append('TRUE' if row[col] else 'FALSE')\n",
-    "            elif isinstance(row[col], str):\n",
-    "                values.append(f\"'{row[col].replace('\\'', '\\'\\'')}'\")\n",
-    "            else:\n",
-    "                values.append(str(row[col]))\n",
-    "        values_str = \", \".join(values)\n",
-    "        insert_statements.append(f\"INSERT INTO {table_name} ({columns_list}) VALUES ({values_str});\")\n",
-    "    ddl += \"\\n\\n\" + \"\\n\".join(insert_statements)\n",
-    "    ddl += \"\\n\"\n",
-    "\n",
-    "    return df, ddl\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -110,36 +37,35 @@
       "Error processing AR91F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
       "Error processing AR95C.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
       "Error processing AR95F.TXT: Unsupported file format. Please use .csv, .xls, or .xlsx files\n",
-      "SQL script for ar_1975_constituinte.xls saved to ./sql_scripts/ddl-dml\\ar_1975_constituinte.sql\n",
-      "SQL script for ar_1976.xls saved to ./sql_scripts/ddl-dml\\ar_1976.sql\n",
-      "SQL script for ar_1979_intercalar.xls saved to ./sql_scripts/ddl-dml\\ar_1979_intercalar.sql\n",
-      "SQL script for ar_1980.xls saved to ./sql_scripts/ddl-dml\\ar_1980.sql\n",
-      "SQL script for ar_1983.xls saved to ./sql_scripts/ddl-dml\\ar_1983.sql\n",
-      "SQL script for ar_1985.xls saved to ./sql_scripts/ddl-dml\\ar_1985.sql\n",
-      "SQL script for ar_1987.xls saved to ./sql_scripts/ddl-dml\\ar_1987.sql\n",
-      "SQL script for ar_1991.xls saved to ./sql_scripts/ddl-dml\\ar_1991.sql\n",
-      "SQL script for ar_1995.xls saved to ./sql_scripts/ddl-dml\\ar_1995.sql\n",
-      "SQL script for ar_1999.xls saved to ./sql_scripts/ddl-dml\\ar_1999.sql\n",
-      "SQL script for ar_2002.xls saved to ./sql_scripts/ddl-dml\\ar_2002.sql\n",
-      "SQL script for ar_2005.xls saved to ./sql_scripts/ddl-dml\\ar_2005.sql\n",
-      "SQL script for ar_2009.xls saved to ./sql_scripts/ddl-dml\\ar_2009.sql\n",
-      "SQL script for ar_2011.xls saved to ./sql_scripts/ddl-dml\\ar_2011.sql\n",
-      "Error processing diff_format: Unsupported file format. Please use .csv, .xls, or .xlsx files\n"
+      "SQL script for ar_1975_constituinte.xls saved to ./sql_scripts/ddl-dml/ar_1975_constituinte.sql\n",
+      "SQL script for ar_1976.xls saved to ./sql_scripts/ddl-dml/ar_1976.sql\n",
+      "SQL script for ar_1979_intercalar.xls saved to ./sql_scripts/ddl-dml/ar_1979_intercalar.sql\n",
+      "SQL script for ar_1980.xls saved to ./sql_scripts/ddl-dml/ar_1980.sql\n",
+      "SQL script for ar_1983.xls saved to ./sql_scripts/ddl-dml/ar_1983.sql\n",
+      "SQL script for ar_1985.xls saved to ./sql_scripts/ddl-dml/ar_1985.sql\n",
+      "SQL script for ar_1987.xls saved to ./sql_scripts/ddl-dml/ar_1987.sql\n",
+      "SQL script for ar_1991.xls saved to ./sql_scripts/ddl-dml/ar_1991.sql\n",
+      "SQL script for ar_1995.xls saved to ./sql_scripts/ddl-dml/ar_1995.sql\n",
+      "SQL script for ar_1999.xls saved to ./sql_scripts/ddl-dml/ar_1999.sql\n",
+      "SQL script for ar_2002.xls saved to ./sql_scripts/ddl-dml/ar_2002.sql\n",
+      "SQL script for ar_2005.xls saved to ./sql_scripts/ddl-dml/ar_2005.sql\n",
+      "SQL script for ar_2009.xls saved to ./sql_scripts/ddl-dml/ar_2009.sql\n",
+      "SQL script for ar_2011.xls saved to ./sql_scripts/ddl-dml/ar_2011.sql\n"
      ]
     }
    ],
    "source": [
     "# Directory containing the data files\n",
     "data_dir = './Data_Selected'\n",
-    "output_dir = './sql_scripts/ddl-dml'\n",
+    "output_dir = './sql_scripts/ddl-dml/'\n",
     "\n",
     "# Create the output directory if it doesn't exist\n",
     "if not os.path.exists(output_dir):\n",
     "    os.makedirs(output_dir)\n",
     "\n",
-    "# Loop through every file in the data directory\n",
-    "for file_name in os.listdir(data_dir):\n",
-    "    file_path = os.path.join(data_dir, file_name)\n",
+    "# Loop through every file in the data directory using the iter_file_paths function\n",
+    "for file_path in iter_file_paths(data_dir):\n",
+    "    file_name = os.path.basename(file_path)\n",
     "    \n",
     "    # Process the file using your SQL DDL function\n",
     "    try:\n",
