--- a/main_server.ipynb
+++ b/main_server.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +68,7 @@
     "sql_dir = './sql_scripts/ddl-dml/'  # Directory containing SQL files\n",
     "for sql_file in iter_file_paths(sql_dir):\n",
     "    try:\n",
-    "        run_sql_in_server(sql_file)\n",
+    "        run_sql_in_server(sql_file, cur)\n",
     "        print(f\"Successfully executed: {sql_file}\")\n",
     "        conn.commit()\n",
     "    except Exception as e:\n",
@@ -78,7 +78,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -1558,17 +1558,17 @@
     }
    ],
    "source": [
-    "read_data_from_table('ar_1985')\n",
+    "read_data_from_table('ar_1985', cur)\n",
     "print(f'\\n\\n')\n",
-    "read_data_from_table('ar_1987')\n",
+    "read_data_from_table('ar_1987', cur)\n",
     "print(f'\\n\\n')\n",
-    "read_data_from_table('ar_1991')\n",
+    "read_data_from_table('ar_1991', cur)\n",
     "print(f'\\n\\n')\n",
-    "read_data_from_table('ar_1999')\n",
+    "read_data_from_table('ar_1999', cur)\n",
     "print(f'\\n\\n')\n",
-    "read_data_from_table('ar_2002')\n",
+    "read_data_from_table('ar_2002', cur)\n",
     "print(f'\\n\\n')\n",
-    "read_data_from_table('ar_2005')\n",
+    "read_data_from_table('ar_2005', cur)\n",
     "print(f'\\n\\n')"
    ]
   }
