--- a/main_ddl.ipynb
+++ b/main_ddl.ipynb
@@ -9,7 +9,62 @@
     "\n",
     "import pandas as pd\n",
     "import os\n",
-    "from myMethods import iter_file_paths, generate_ddl_from_file"
+    "from myMethods import iter_file_paths, generate_ddl_from_file, process_txt_file"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Successfully processed: Ar76c.txt\n",
+      "Error processing Ar76f.txt: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 2016: invalid start byte\n",
+      "Successfully processed: AR79C.TXT\n",
+      "Error processing AR79F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 994: invalid start byte\n",
+      "Successfully processed: AR80C.TXT\n",
+      "Error processing AR80F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 1966: invalid start byte\n",
+      "Successfully processed: AR83C.TXT\n",
+      "Error processing AR83F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 2209: invalid start byte\n",
+      "Successfully processed: AR85C.TXT\n",
+      "Error processing AR85F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 6278: invalid start byte\n",
+      "Successfully processed: AR87C.TXT\n",
+      "Error processing AR87F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 5938: invalid start byte\n",
+      "Successfully processed: AR91C.TXT\n",
+      "Error processing AR91F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 7572: invalid start byte\n",
+      "Successfully processed: AR95C.TXT\n",
+      "Error processing AR95F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 2352: invalid start byte\n",
+      "Error processing ar_1975_constituinte.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_1976.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_1979_intercalar.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_1980.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_1983.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_1985.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_1987.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_1991.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_1995.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_1999.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_2002.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_2005.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_2009.xls: Unsupported file format. This function only processes .txt files.\n",
+      "Error processing ar_2011.xls: Unsupported file format. This function only processes .txt files.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Directory containing the data files\n",
+    "DATA_dir = './Data_Selected'  # You'll update this path later\n",
+    "\n",
+    "# Loop through every file in the data directory\n",
+    "for file_path in iter_file_paths(DATA_dir):\n",
+    "    try:\n",
+    "        df = process_txt_file(file_path, DATA_dir)\n",
+    "        print(f\"Successfully processed: {os.path.basename(file_path)}\")\n",
+    "    except Exception as e:\n",
+    "        print(f\"Error processing {os.path.basename(file_path)}: {e}\")"
    ]
   },
   {
@@ -345,6 +400,26 @@
     "ddl_path = './sql_scripts/ddl_script.sql'\n",
     "with open(ddl_path, 'w') as f:\n",
     "    f.write(test_sql_ddl)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "242"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "994 - (994 // 376) * 376"
    ]
   }
  ],
