function to process txt final

--- a/main_ddl.ipynb
+++ b/main_ddl.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -22,21 +22,21 @@
      "output_type": "stream",
      "text": [
       "Successfully processed: Ar76c.txt\n",
-      "Error processing Ar76f.txt: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 2016: invalid start byte\n",
+      "Successfully processed: Ar76f.txt\n",
       "Successfully processed: AR79C.TXT\n",
-      "Error processing AR79F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 994: invalid start byte\n",
+      "Successfully processed: AR79F.TXT\n",
       "Successfully processed: AR80C.TXT\n",
-      "Error processing AR80F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 1966: invalid start byte\n",
+      "Successfully processed: AR80F.TXT\n",
       "Successfully processed: AR83C.TXT\n",
-      "Error processing AR83F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 2209: invalid start byte\n",
+      "Successfully processed: AR83F.TXT\n",
       "Successfully processed: AR85C.TXT\n",
-      "Error processing AR85F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 6278: invalid start byte\n",
+      "Successfully processed: AR85F.TXT\n",
       "Successfully processed: AR87C.TXT\n",
-      "Error processing AR87F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 5938: invalid start byte\n",
+      "Successfully processed: AR87F.TXT\n",
       "Successfully processed: AR91C.TXT\n",
-      "Error processing AR91F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 7572: invalid start byte\n",
+      "Successfully processed: AR91F.TXT\n",
       "Successfully processed: AR95C.TXT\n",
-      "Error processing AR95F.TXT: Error reading fixed-width file: 'utf-8' codec can't decode byte 0x80 in position 2352: invalid start byte\n",
+      "Successfully processed: AR95F.TXT\n",
       "Error processing ar_1975_constituinte.xls: Unsupported file format. This function only processes .txt files.\n",
       "Error processing ar_1976.xls: Unsupported file format. This function only processes .txt files.\n",
       "Error processing ar_1979_intercalar.xls: Unsupported file format. This function only processes .txt files.\n",
@@ -61,7 +61,7 @@
     "# Loop through every file in the data directory\n",
     "for file_path in iter_file_paths(DATA_dir):\n",
     "    try:\n",
-    "        df = process_txt_file(file_path, DATA_dir)\n",
+    "        df = process_txt_file(file_path, DATA_dir, _encoding= 'cp1252')\n",
     "        print(f\"Successfully processed: {os.path.basename(file_path)}\")\n",
     "    except Exception as e:\n",
     "        print(f\"Error processing {os.path.basename(file_path)}: {e}\")"
